# page_analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  database.sql  pyproject.toml
.github/workflows/: python-ci.yml
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/layouts/: base_layout.html
page_analyzer/tests/: test_app.py
