[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer - web-application that checks sites for SEO suitability"
authors = ["Petr Malafeev <StandBy545@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/Pythonusus/python-project-83"
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Framework :: Flask"
]
packages = [
  { include = "page_analyzer" },
]


[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
validators = "^0.33.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
